# ML_demo

./: .gitignore
.github/workflows/: ci.yml
ai-12w/services/ml_service/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
ai-12w/services/ml_service/artifacts/: metrics.json  model.joblib  run.json
ai-12w/services/ml_service/src/ml_service/: __init__.py  api.py  config.py  logging_config.py  train.py
ai-12w/services/ml_service/tests/: test_smoke.py
ai-12w/services/rag_service/: Makefile  pyproject.toml
ai-12w/services/rag_service/artifacts/: rag_index.joblib
ai-12w/services/rag_service/docs/: demo.md
ai-12w/services/rag_service/src/rag_service/: api.py  config.py  ingest.py  rag.py
ai-12w/services/rag_service/src/rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-12w/services/rag_service/tests/: test_smoke.py
