[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "“zkewei19”", email = "zkewei19@vt.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
ml-service = "ml_service:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
